--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,16 @@
       </ul>
     </div>
     <div class="container">
+    {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+    {% block body %}
 
+    {% endblock %}
     </div>
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
