--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,42 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="{% static "css/materialize.css" %}"  media="screen,projection"/>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static "css/materialize.css" %}"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{% static "css/robotgear.css" %}"  media="screen,projection"/>
+    <title>Hello World!</title>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 <body>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
-    <div class="container">
+<nav class="red">
+    <div class="nav-wrapper container">
+        <a href="#!" class="brand-logo"><img class="logo-img" src={% static "img/RoboGearTrade.svg" %}>RobotGear</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
 
+            <li><a href="badges.html">Browse</a></li>
+            <li><a href="collapsible.html">Submit</a></li>
+            <li><a href="mobile.html">About</a></li>
+        </ul>
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="sass.html">Browse</a></li>
+            <li><a href="badges.html">Submit</a></li>
+            <li><a href="collapsible.html">About</a></li>
+        </ul>
     </div>
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
+</nav>
+
+<div class="container">
+
+</div>
+<!--JavaScript at end of body for optimized loading-->
+
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
+<script type="text/javascript" src="{% static "js/init.js" %}"></script>
 </body>
 </html>
