--- a/static/css/robotgear.css
+++ b/static/css/robotgear.css
@@ -1,6 +1,7 @@
 .logo-img {
     max-height: 64px!important;
     padding: 5px 0!important;
+    margin-bottom: 5px;
     vertical-align: middle;
     display: inline-block;
 }
