--- a/templates/base.html
+++ b/templates/base.html
@@ -7,20 +7,25 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="{% static "css/materialize.css" %}"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="{% static "css/robotgear.css" %}"  media="screen,projection"/>
-    <title>Hello World!</title>
+    <title>{% block title %}RobotGear.trade{% endblock %}</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 <nav class="red">
     <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo"><img class="logo-img" src={% static "img/RoboGearTrade.svg" %}>RobotGear</a>
+        <a href={% url 'index' %} class="brand-logo"><img class="logo-img hide-on-small-only" src={% static "img/RoboGearTrade.svg" %}>RobotGear</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
 
             <li><a href="badges.html">Browse</a></li>
             <li><a href="collapsible.html">Submit</a></li>
             <li><a href="mobile.html">About</a></li>
+            {% if user.is_authenticated %}
+                <li><a href={% url 'logout' %}>Logout</a></li>
+            {% else %}
+                <li><a href={% url 'login' %}>Login</a></li>
+            {% endif %}
         </ul>
         <ul class="sidenav" id="mobile-demo">
             <li><a href="sass.html">Browse</a></li>
@@ -31,12 +36,46 @@
 </nav>
 
 <div class="container">
-
+{% block body %} {% endblock %}
 </div>
+
+<footer class="page-footer red">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © {% now "o" %} RobotGear
+            <a class="grey-text text-lighten-4 right" href="https://github.com/robotgear/robotgear">RobotGear is open source!</a>
+            </div>
+          </div>
+        </footer>
+
 <!--JavaScript at end of body for optimized loading-->
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
 <script type="text/javascript" src="{% static "js/init.js" %}"></script>
+{% if messages %}
+    <script type="text/javascript">
+        {% for message in messages %}
+            M.toast({html: '{{ message }}'})
+        {% endfor %}
+    </script>
+{% endif %}
 </body>
 </html>
