--- a/templates/login.html
+++ b/templates/login.html
@@ -2,11 +2,21 @@
 {% block body %}
 
     <form method="POST">
-    {% csrf_token %}
-     Username:<br>
-    <input type="text" name="username"><br>
-     Password:<br>
-        <input type="password" name="password">
-    <input type="submit" value="Submit">
-     </form>
+        {% csrf_token %}
+        <div class="row">
+        <div class="input-field col s12 m6">
+            <input id="username" type="text" class="validate" name="username">
+            <label for="username">Username</label>
+        </div>
+        <div class="input-field col s12 m6">
+            <input id="password" type="password" class="validate" name="password">
+            <label for="password">Password</label>
+        </div>
+        </div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Login
+            <i class="material-icons right">send</i>
+        </button>
+        <a href="{% url 'register' %}" class="waves-effect waves-light btn" >Register</a>
+    <p></p>
+    </form>
 {% endblock %}
