--- a/templates/register.html
+++ b/templates/register.html
@@ -25,7 +25,7 @@
             <label for="first_name">First Name</label>
         </div>
         <div class="input-field col s12 m6">
-            <input id="last_name" type="text" class="validate" name="first_name">
+            <input id="last_name" type="text" class="validate" name="last_name">
             <label for="last_name">Last Name</label>
         </div>
         </div>
