--- a/templates/register.html
+++ b/templates/register.html
@@ -6,17 +6,17 @@
         <div class="row">
         <div class="input-field col s12 m6">
             <i class="material-icons prefix tooltipped" data-position="bottom" data-tooltip="This will be what you log in with, as well as displayed publicly">person</i>
-            <input id="username" type="text" class="validate" name="username">
+            <input id="username" type="text" class="validate" name="username" required>
             <label for="username">Username</label>
         </div>
         <div class="input-field col s12 m6">
             <i class="material-icons prefix tooltipped" data-position="bottom" data-tooltip="Your password must not be common, a part of your information, and over 8 characters">lock</i>
-            <input id="password" type="password" class="validate" name="password">
+            <input id="password" type="password" class="validate" name="password" required>
             <label for="password">Password</label>
         </div>
         </div>
         <div class="input-field col s12">
-            <input id="email" type="email" class="validate" name="email">
+            <input id="email" type="email" class="validate" name="email" required>
             <label for="email">Email</label>
         </div>
         <div class="row">
