Swapped to semantic UI, add requirements.txt

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %}
+{% extends "static_header.html" %}
 {% block body %}
-    This is RobotGear.
+<div class="ui main text container">
+
+    <h1 class="ui header">Semantic UI Fixed Template</h1>
+    <p>This is RobotGear.</p>
+</div>
 {% endblock %}
