--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,51 @@
-{% extends "base.html" %}
+{% extends "static_header.html" %}
 {% block body %}
+  <style type="text/css">
+    body {
+      background-color: #DADADA;
+    }
+    body > .grid {
+      height: 800px;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+      <img src="/static/img/RoboGearTrade.svg" class="image">
+      <div class="content">
+        Log-in to your account
+      </div>
+    </h2>
+    <form class="ui large form">
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="email" placeholder="E-mail address">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <div class="ui fluid large teal submit button">Login</div>
+      </div>
 
-    <form method="POST">
-        {% csrf_token %}
-        <div class="row">
-        <div class="input-field col s12 m6">
-            <input id="username" type="text" class="validate" name="username">
-            <label for="username">Username</label>
-        </div>
-        <div class="input-field col s12 m6">
-            <input id="password" type="password" class="validate" name="password">
-            <label for="password">Password</label>
-        </div>
-        </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Login
-            <i class="material-icons right">send</i>
-        </button>
-        <a href="{% url 'register' %}" class="waves-effect waves-light btn" >Register</a>
-    <p></p>
+      <div class="ui error message"></div>
+
     </form>
+
+    <div class="ui message">
+      New to us? <a href="#">Sign Up</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
