--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     body > .grid {
       height: 800px;
     }
-    .image {
+    .header .image {
       margin-top: -100px;
     }
     .column {
@@ -44,7 +44,7 @@
     </form>
 
     <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
+      New to us? <a href="{% url 'register' %}">Sign Up</a>
     </div>
   </div>
 </div>
