--- a/templates/static_header.html
+++ b/templates/static_header.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block navbar %}
       <style type="text/css">
   body {
@@ -20,7 +21,7 @@
   </style>
 <div class="ui top fixed inverted menu">
       <a href="/" class="header item">
-        <img class="logo" src="/static/img/RoboGearTrade.svg">
+        <img class="logo" src="{% static 'img/RoboGearTrade.svg' %}">
         RobotGear.Trade
       </a>
       <div class="right menu">
