--- a/templates/base.html
+++ b/templates/base.html
@@ -11,19 +11,22 @@
     <title>{% block title %}RobotGear.trade{% endblock %}</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
 </head>
 
 
 <body>
-
 {%  block navbar %} {%  endblock %}
 
+<div class="ui main text container">
 {% block body %} {% endblock %}
-
+</div>
 
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
-      <img src="{% static 'img/RoboGearTrade.svg' %}" class="ui centered mini image">
+      <img src="{% static 'img/RoboGearTrade.svg' %}" class="ui centered tiny image">
       <div class="ui horizontal inverted small divided link list">
         <a class="item" href="#">Site Map</a>
         <a class="item" href="#">Contact Us</a>
