--- a/templates/static_header.html
+++ b/templates/static_header.html
@@ -2,27 +2,22 @@
 {% load static %}
 {% block navbar %}
       <style type="text/css">
-  body {
-    background-color: #FFFFFF;
-  }
-  .ui.menu .item img.logo {
-    margin-right: 1.5em;
+  #header-logo {
+        height: 3em;
+        width: auto;
+      padding: 0 0 0;
   }
   .main.container {
     margin-top: 7em;
   }
-  .wireframe {
-    margin-top: 2em;
-  }
   .ui.footer.segment {
-    margin: 5em 0em 0em;
-    padding: 5em 0em;
+    margin: 2em 0em 0em;
+    padding: 2em 0em;
   }
   </style>
 <div class="ui top fixed inverted menu">
       <a href="/" class="header item">
-        <img class="logo" src="{% static 'img/RoboGearTrade.svg' %}">
-        RobotGear.Trade
+        <img class="logo" id="header-logo" src="{% static 'img/RoboGearTrade.svg' %}">
       </a>
       <div class="right menu">
           {% if user.is_authenticated %}
