--- a/templates/static_header.html
+++ b/templates/static_header.html
@@ -1,30 +1,47 @@
 {% extends "base.html" %}
 {% load static %}
 {% block navbar %}
-      <style type="text/css">
-  #header-logo {
-        height: 3em;
-        width: auto;
-      padding: 0 0 0;
-  }
-  .main.container {
-    margin-top: 7em;
-  }
-  .ui.footer.segment {
-    margin: 2em 0em 0em;
-    padding: 2em 0em;
-  }
-  </style>
-<div class="ui top fixed inverted menu">
-      <a href="/" class="header item">
-        <img class="logo" id="header-logo" src="{% static 'img/RoboGearTrade.svg' %}">
-      </a>
-      <div class="right menu">
-          {% if user.is_authenticated %}
-              <a class="item">Welcome, {{ user.username }}. Thanks for logging in.</a>
-          {% else %}
-              <a href="{% url 'login' %}" class="item">Welcome, new user. Please log in.</a>
-          {% endif %}
-      </div>
-</div>
+    <style type="text/css">
+        #header-logo {
+            height: 3em;
+            width: auto;
+            padding: 0 0 0;
+        }
+        .main.container {
+            margin-top: 7em;
+        }
+        .ui.footer.segment {
+            margin: 2em 0em 0em;
+            padding: 2em 0em;
+        }
+    </style>
+    <div class="ui top fixed inverted menu">
+        <a href="/" class="header item">
+            <img class="logo" id="header-logo" src="{% static 'img/RoboGearTrade.svg' %}">
+        </a>
+        <div class="right menu">
+            {% if user.is_authenticated %}
+                <div class="ui simple dropdown item">{{ user.username }}
+                    {% if messages %}
+                        <div class="ui red label">{{ messages|length }}</div>
+                    {% endif %}
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a class="item" href="{% url 'logout' %}">Logout</a>
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="divider"></div>
+                                <a class="item">{{ message }}</a>
+                                <div class="divider"></div>
+                            {% endfor %}
+                        {% else %}
+                            <div class="item">No current messages.</div>
+                        {% endif %}
+                    </div>
+                </div>
+            {% else %}
+                <a href="{% url 'login' %}" class="item">Log in.</a>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
