--- a/templates/reset.html
+++ b/templates/reset.html
@@ -37,19 +37,6 @@
                                         prompt: 'Please enter your username'
                                     }
                                 ]
-                            },
-                            password: {
-                                identifier: 'password',
-                                rules: [
-                                    {
-                                        type: 'empty',
-                                        prompt: 'Please enter your password'
-                                    },
-                                    {
-                                        type: 'length[6]',
-                                        prompt: 'Your password must be at least 6 characters'
-                                    }
-                                ]
                             }
                         }
                     })
@@ -59,13 +46,13 @@
     </script>
     <div class="ui middle aligned center aligned grid">
         <div class="column">
-            <form class="ui large form" action="{% url 'login' %}" method="POST">
+            <form class="ui large form" action="{% url 'reset' %}" method="POST">
                 {% csrf_token %}
                 <div class="ui stacked segment">
                     <h2 class="ui image header">
                         <img src="/static/img/RoboGearTrade.svg" class="image">
                         <div class="content">
-                            Log-in to your account
+                            Reset Your Password
                         </div>
                     </h2>
                     <div class="field">
@@ -74,13 +61,7 @@
                             <input type="text" name="username" placeholder="Username">
                         </div>
                     </div>
-                    <div class="field">
-                        <div class="ui left icon input">
-                            <i class="lock icon"></i>
-                            <input type="password" name="password" placeholder="Password">
-                        </div>
-                    </div>
-                    <div class="ui fluid large submit button">Login</div>
+                    <div class="ui fluid large submit button">Send Email</div>
                 </div>
 
                 <div class="ui error message">
@@ -96,13 +77,6 @@
                 </div>
 
             </form>
-
-            <div class="ui message">
-                New to us? <a href="{% url 'register' %}">Sign Up</a>
-            </div>
-            <div class="ui message">
-                Forgot your password? <a href="{% url 'reset' %}">Reset it</a>
-            </div>
         </div>
     </div>
 {% endblock %}
