--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/icon.ico' %}"/>
 
 </head>
 
