--- a/templates/admin/competition_changelist.html
+++ b/templates/admin/competition_changelist.html
@@ -1,10 +1,17 @@
 {% extends 'admin/change_list.html' %}
 
 {% block object-tools %}
+    <p> The following buttons will pull the latest data from the FIRST servers about team registration. Keep in mind these take quite a while to run, so do not refresh your browser while they're running </p>
     <div>
-        <form action="update_FIRST_teams/" method="POST">
+        <form action="update_FRC/" method="POST">
             {% csrf_token %}
-                <button type="submit">Update FIRST Teams</button>
+                <button type="submit">Update FRC Teams</button>
+        </form>
+    </div>
+    <div>
+        <form action="update_FTC/" method="POST">
+            {% csrf_token %}
+                <button type="submit">Update FTC Teams</button>
         </form>
     </div>
     <br />
