Begin settings page

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <body>
 {%  block navbar %} {%  endblock %}
 
-<div class="ui main text container">
+<div class="ui main container">
 {% block body %} {% endblock %}
 </div>
 
