Add Team Membership Delete

--- a/templates/admin/competition_changelist.html
+++ b/templates/admin/competition_changelist.html
@@ -1,7 +1,7 @@
 {% extends 'admin/change_list.html' %}
 
 {% block object-tools %}
-    <p> The following buttons will pull the latest data from the FIRST servers about team registration. Keep in mind these take quite a while to run, so do not refresh your browser while they're running </p>
+    <p> The following buttons will pull the latest data from the FIRST servers about team registration. Keep in mind these take quite a while to run, so do not refresh your browser while they're running. </p>
     <div>
         <form action="update/FRC/" method="POST">
             {% csrf_token %}
@@ -24,6 +24,12 @@
         <form action="update/JFLL/" method="POST">
             {% csrf_token %}
                 <button type="submit">Update JFLL Teams</button>
+        </form>
+    </div>
+    <div>
+        <form action="update/all/" method="POST">
+            {% csrf_token %}
+                <button type="submit">Update Historical Teams</button>
         </form>
     </div>
     <br />
