--- a/templates/static_header.html
+++ b/templates/static_header.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             {% else %}
-                <a href="{% url 'login' %}" class="item">Log in.</a>
+                <a href="{% url 'login' %}" class="item">Log in</a>
             {% endif %}
         </div>
     </div>
